--- a/lab06/grpc-server-deploy.yml
+++ b/lab06/grpc-server-deploy.yml
@@ -1,18 +1,18 @@
-kind: Deployment
 apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: grpc-server-deploy
 spec:
-  minReadySeconds: 1
-  replicas: 1
+  replicas: 6
   selector:
     matchLabels:
       app: grpc-server
+  minReadySeconds: 1
   strategy:
+    type: rollingUpdate
     rollingUpdate:
-      maxSurge: 1
       maxUnavailable: 1
-    type: RollingUpdate
+      maxSurge: 1
   template:
     metadata:
       labels:
