--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,13 @@ services:
     ports:
       - "50051:50051"
 
+  grpc-quote-server:
+    build:
+      context: .
+      dockerfile: quote-server/Dockerfile
+    ports:
+      - "50052:50052"
+
   grpc-client:
     build:
       context: .
@@ -20,6 +27,21 @@ services:
         "--",
         "python",
         "client/client.py",
+      ]
+
+  grpc-quote-client:
+    build:
+      context: .
+      dockerfile: quote-client/Dockerfile
+    depends_on:
+      - "grpc-quote-server"
+    command:
+      [
+        "./wait-for-it.sh",
+        "app/grpc-quote-server:50052",
+        "--",
+        "python",
+        "quote-client/client.py",
       ]
 
   redis:
