quote server and client dockerfile update

--- a/quote-server/Dockerfile
+++ b/quote-server/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY . /app
 
-RUN pip install --trusted-host pypi.python.org -r server/requirements.txt
+RUN pip install --trusted-host pypi.python.org -r quote-server/requirements.txt
 
 EXPOSE 50052
 
