--- a/quote-client/Dockerfile
+++ b/quote-client/Dockerfile
@@ -4,6 +4,6 @@ WORKDIR /app
 
 COPY . /app
 
-RUN pip install --trusted-host pypi.python.org -r client/requirements.txt
+RUN pip install --trusted-host pypi.python.org -r quote-client/requirements.txt
 
 CMD ["python", "quote-client/client.py"]
